# -win-terminal-notifier

./: LICENSE  README.md
win-terminal-notifier/: LICENSE  README.md  main.py  notifier.py  pyproject.toml  requirements.txt  session_manager.py  test_msgbox.ps1  window_monitor.py
win-terminal-notifier/tests/: test_integration.py  test_notifier.py  test_session_manager.py  test_window_monitor.py
